# void-chant-plugin

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Resources/: VoidChant.entitlements
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VoidChantVoice.h
